<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="57dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/diamond" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/email"
            android:layout_marginLeft="7dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/emailCheckResultTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/id_check_message"
            android:textColor="@color/darkGray"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:padding="10dp"
            android:hint="이메일 입력"
            android:background="@drawable/gray_border_box" />

        <Button
            android:id="@+id/emailCheckBtn"
            android:layout_marginRight="7dp"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:text="@string/check_duplicated_id"
            android:textColor="@color/darkGray"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/gray_border_box_for_pressed"/>


    </FrameLayout>


</LinearLayout>